package application;

import javafx.application.Application;
import javafx.stage.Stage;

public class Main extends Application {

	@Override
	public void start(Stage primaryStage) throws Exception {
		Game.init(primaryStage); // clean looking main
	}
	
	public static void main(String[] args) {
		launch(args);
	}

}
