package application.view;

import application.TransitionType;
import application.ViewManager;
import audio.AudioManager;
import javafx.geometry.Insets;
import javafx.geometry.Pos;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.layout.*;
import javafx.scene.paint.Color;
import javafx.scene.paint.Paint;
import ui.button.BackButton;
import util.LevelLoader;

import java.io.IOException;

public class LevelSelectorView extends View {

    private static LevelSelectorView instance;

    public LevelSelectorView() {
        super();
        setInstance(this);

        Label title = new Label("Select a level");
        title.getStyleClass().add("text-title");


        GridPane levelSelectGrid = new GridPane();
        levelSelectGrid.getStyleClass().setAll("level-select-grid");


        for (int i = 0; i < LevelLoader.TOTAL_LEVELS; i++) {
            final int veryEffectivelyFinal = i + 1;
            Button levelSelectButton = new Button();
            levelSelectButton.setText(String.valueOf(veryEffectivelyFinal));
            levelSelectButton.setPrefSize(170, 170);
            levelSelectButton.setFocusTraversable(false);
            levelSelectButton.getStyleClass().setAll("level-select-button");
            levelSelectButton.setOnAction(actionEvent -> {
                AudioManager.playSoundEffect("button-click");
                try {
                    ViewManager.getInstance().switchView(
                            new GameView(LevelLoader.loadLevel(String.valueOf(veryEffectivelyFinal))),
                            TransitionType.FADE
                    );
                } catch (IOException e) {
                    e.printStackTrace();
                }
            }); // Always use setOnAction instead of setOnMouseClicked

            levelSelectGrid.add(levelSelectButton, i % 4, i / 4);
        }

        VBox layout = new VBox(25);
        layout.getChildren().add(title);
        layout.getChildren().add(levelSelectGrid);
        layout.setAlignment(Pos.TOP_CENTER);

        layout.setPadding(new Insets(50));

        root.getChildren().addAll(layout, new BackButton());
        root.setBackground(new Background(new BackgroundFill(Color.WHITE, CornerRadii.EMPTY, Insets.EMPTY)));
    }

    @Override
    public void startup() {
        AudioManager.playMusic("music-menu");
    }

    @Override
    public void cleanup() {}

    public static LevelSelectorView getInstance() {
        return instance;
    }

    public static void setInstance(LevelSelectorView view) {
        instance = view;
    }
}
